syntax = "proto3";

option java_package = "web.pb";
option java_multiple_files = true;

service StorehouseService {
  rpc GetMerchAvailability(StorehouseRequest) returns (StorehouseResponse) {}
}

message StorehouseRequest {
  int64 id = 1;
}

message StorehouseResponse {
  bool isHas = 1;
}
